tests/NormalTests/paczka1/small_fuzzy/89334615.err
Error in line 3: ObKX96E A520 384,1
Error in line 7: ObKX96E S33 80,2
Error in line 9: ObKX96E A277 55,3
Error in line 6: T3M S33 371,4
Error in line 10: ObKX96E S33 14,8
Error in line 12: T3M A520 52,9
